--March 3, 2010--
- Added tooltips to project lists to help differentiate similar projects

--February 27, 2010--
- Added support for PopupApplets.

--February 25,2010--
- Implemented project notes as dockwidget.
- Implemented import/export to GHNS.

--February 22,2010--
- Implemented installing non-plasmoids via publisher.

--February 19,2010--
- Publisher now publishes non-plasmoids as *.zip. Installing non-plasmoids disallowed
- Delete project support added.

--February 13,2010--
- Added sensible indentation/tab defaults for editor (katepart).

--February 7, 2010--
- Prevented creation of "theme" projects since there are no templates for it.
- Connected sourceDirectoryChanged() to a slot that destructive-refreshes
  any open editor's contents. Timeline works beautifully now! \o/

--February 6, 2010--
- Added basic git ignore capabilities
- Added sourceDirectoryChanged to notify when the git repo is changed
  (now, we have to connect it to the editor, to refresh the view)

--January 27, 2010--
- Limited recent project list on startpage to showing 5 projects.
- Added "More Projects" button to startpage, as well as a beginning
  implementation of a Project Management Dialog, that currently only
  loads projects.

--January 21, 2010--
- Added not-so-pretty-but-usable (I think :P ) find text functionality
  to documentation widget.

--January 11, 2010--
- Added python runner template, fixed encoding signature and runner creation.
- Fixed silly crash happening when starting PlasMate and then closing it.

--December 9, 2009--
- Refactored the Sidebar in order to inherit from QTableWidget, now it can
  be placed both in vertical and horizontal position; btw it need some 
  polishing yet =)
- Fixed font rendering, now it doesn't cut the ending of the string
- Updated older and obsolete includes

--December 6,2009--
- Documentation widget now saves its current page on exit and restores
  it the next time PlasMate starts.

--December 5, 2009--