@@ -1,3 +1,9 @@
+--March 20,2010--
+- Added a stub runner previewer
+
+--March 14,2010--
+- Exporting now prompts for overwrite permission if target file exists.
+
 --March 3, 2010--
 - Added tooltips to project lists to help differentiate similar projects
 
